--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "convex dev --run-sh 'next dev'",
-    "build": "convex deploy && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "convex:dev": "convex dev",
     "convex:deploy": "convex deploy"
   },
   "dependencies": {
+    "@convex-dev/better-auth": "^0.8.6",
     "@daveyplate/better-auth-ui": "^2.1.11",
     "@faker-js/faker": "^10.0.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.49",
     "@langchain/core": "^0.3.66",
     "@pinecone-database/pinecone": "^6.1.2",
-    "convex": "^1.27.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -39,6 +39,7 @@
     "chromadb": "^3.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
