--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "convex:deploy": "convex deploy"
   },
   "dependencies": {
-    "@convex-dev/better-auth": "^0.8.6",
-    "@daveyplate/better-auth-ui": "^2.1.11",
+    "@convex-dev/auth": "^0.0.90",
     "@faker-js/faker": "^10.0.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.49",
@@ -35,7 +34,6 @@
     "@types/leaflet-draw": "^1.0.13",
     "@types/pdf-parse": "1.1.5",
     "@vercel/blob": "^1.1.1",
-    "better-auth": "^1.3.4",
     "chromadb": "^3.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
